finally found the right configuration to run performance tests