@@ -7,7 +7,9 @@ import static org.ops4j.pax.exam.CoreOptions.options;
 import static org.ops4j.pax.exam.container.def.PaxRunnerOptions.vmOption;
 
 import java.io.File;
+import java.io.IOException;
 
+import org.apache.commons.io.FileUtils;
 import org.junit.runner.RunWith;
 import org.ops4j.pax.exam.Option;
 import org.ops4j.pax.exam.junit.Configuration;
@@ -18,9 +20,15 @@ public final class H2PerformanceTest extends AbstractPerformanceTest {
 
     @Configuration
     public static Option[] configuration() {
-        new File("/tmp/sling").delete();
-        return options(debug(), slingBasicConfiguration(),
-                stoneH2Configuration(),vmOption("-Duser.language=en -Duser.country=US"));
+        try {
+            FileUtils.deleteDirectory(new File("/tmp/sling"));
+        } catch (IOException e) {
+            // do it quietly
+        }
+        return options(debug(),
+                slingBasicConfiguration(),
+                stoneH2Configuration(),
+                vmOption("-Duser.language=en -Duser.country=US -Xms2048m -Xmx2048m -XX:PermSize=128m -XX:-UseGCOverheadLimit"));
     }
 
     public H2PerformanceTest() {
